<resources>
    <string name="app_name">My Notes</string>
    <string name="Heading1">TITLE</string>
    <string name="Heading2">DESCRIPTION</string>
    <string name="hint1">Give some title</string>
    <string name="hint2">Give some description</string>
    <string name="channel_name">Reminder</string>
    <string name="channel_description">App Reminder and Alarm Notificaions</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="reminder">REMINDER</string>
    <string name="time">TIME</string>
    <string name="date">DATE</string>
    <string name="remove">REMOVE</string>
    <string name="set">SET</string>
    <string name="no_data_found">No data found</string>
    <string name="title">Title</string>
    <string name="confirm">Confirm</string>
</resources>
