<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="12dp"
        android:paddingRight="20dp"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/Heading1"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint1"
            android:inputType="textMultiLine"
            android:background="@drawable/rounded_edittext_bg"
            android:maxLines="2"
            android:minHeight="56dp"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="monospace"
            android:text="@string/Heading2"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext_bg"
            android:ems="10"
            android:hint="@string/hint2"
            android:inputType="textMultiLine|textAutoCorrect"
            android:maxLines="15"
            android:padding="5dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:minHeight="56dp"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#FFD500"
                android:paddingLeft="5dp"
                android:paddingTop="3dp"
                android:paddingRight="5dp"
                android:paddingBottom="3dp"
                android:text="ignore"
                android:textColor="#000000"
                android:textColorHighlight="#EAD40D"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#FFFF00"
                android:paddingLeft="5dp"
                android:paddingTop="3dp"
                android:paddingRight="5dp"
                android:paddingBottom="3dp"
                android:text="ignore"
                android:textColor="#000000"
                android:textColorHighlight="#EAD40D"
                android:textSize="18sp" />
        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvTitleDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="monospace"
                android:text="Date"
                android:textColor="#CA0994"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="24sp" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/tvTitleTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="monospace"
                android:text="Time"
                android:textColor="#CA0994"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="24sp" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:backgroundTint="@color/red"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:paddingRight="7dp"
            android:paddingBottom="7dp"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:paddingRight="7dp"
            android:paddingBottom="7dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>